@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-04T16:29:30Z",
-  "count" : 7,
-  "count_minmax" : [ 0, 7 ],
-  "count_prev_day_inc" : 14,
-  "count_prev_day_dec" : 2,
-  "uniques" : 4,
-  "uniques_minmax" : [ 0, 4 ],
-  "uniques_prev_day_inc" : 9,
-  "uniques_prev_day_dec" : 1
+  "timestamp" : "2022-05-18T08:23:01Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 7 ],
+  "count_decinc" : [ -6, +0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 4 ],
+  "uniques_decinc" : [ -3, +0 ]
 }
