@@ -1,11 +1,11 @@
 {
-  "count": 282,
-  "uniques": 18,
+  "count": 276,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-05-04T00:00:00Z",
-      "count": 7,
-      "uniques": 4
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-05T00:00:00Z",
