@@ -1,3 +1,10 @@
+2022-05-18T08:23:01Z:
+* notice: last 14d: all unq: 276 17
+* notice: prev accum: outdated-all outdated-unq / all unq: 1835 371 / 2117 406
+* notice: next accum: outdated-all outdated-unq / all unq: 1835 371 / 2111 403
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -6 / +0 +0 -3 -6 / 1 1
+* notice: changed dates: [2022-05-04]
+
 2022-05-18T01:22:34Z:
 * notice: last 14d: all unq: 282 18
 * notice: prev accum: outdated-all outdated-unq / all unq: 1828 366 / 2115 405
